src/test/ui/hrtb/hrtb-cache-issue-54302.stderr
warning: lifetime parameter `'de` never used
  --> $DIR/hrtb-cache-issue-54302.rs:8:19
   |
LL | trait Deserialize<'de> {}
   |                  -^^^- help: elide the unused lifetime
   |
   = note: `#[warn(unused_lifetimes)]` on by default

error: implementation of `Deserialize` is not general enough
  --> $DIR/hrtb-cache-issue-54302.rs:19:5
   |
LL |     assert_deserialize_owned::<&'static str>();
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `&'static str` must implement `Deserialize<'0>`, for any lifetime `'0`
   = note: but `&str` actually implements `Deserialize<'1>`, for some specific lifetime `'1`

error: aborting due to previous error

